syntax = "proto3";

package runm;

enum FaultCode {
    // Some HTTP-like codes
    NOT_FOUND = 0;
    DUPLICATE = 1;
    BAD_INPUT = 2;
    NO_AUTH = 3;
    FORBIDDEN = 4;
    TIMEOUT = 5;

    // More domain-specific errors
    GENERATION_CONFLICT = 100;

    UNKNOWN = 9999;
}

// Information about individual errors that may have occurred
message Error {
    FaultCode fault_code = 1;
    string error_text = 2;
}
