syntax = "proto3";

package runmresource;

import "provider.proto";
import "session.proto";

// The runm-resource gRPC service manages inventory of the deployment's set of
// resource providers, the transactional claims of resources, basic scheduling
// and reservations.
service RunmResource {
    // Returns information about a specific provider
    rpc provider_get(ProviderGetRequest) returns (Provider) {}

    // Create a new provider
    rpc provider_create(ProviderCreateRequest) returns (
        ProviderCreateResponse) {}
}

message ProviderGetRequest {
    Session session = 1;
    string uuid = 2;
}

message ProviderCreateRequest {
    Session session = 1;
    Provider provider = 2;
}

message ProviderCreateResponse {
    // The newly-created object
    Provider provider = 1;
}
